cluster/download/prowlarr/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: download
  labels:
    app: prowlarr
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      automountServiceAccountToken: false
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9696
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ping
              port: 9696
          livenessProbe:
            httpGet:
              path: /ping
              port: 9696
            initialDelaySeconds: 60
            periodSeconds: 60
            failureThreshold: 10
          resources:
            requests:
              cpu: 100m
              memory: 128M
            limits:
              memory: 1024M
          volumeMounts:
            - name: config
              mountPath: /config
      securityContext:
        fsGroup: 1000
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
        - name: config-seed
          secret:
            defaultMode: 0644
            secretName: prowlarr-config
            items:
              - key: config.xml
                path: config.xml
