cluster/download/prowlarr/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: download
spec:
  selector:
    app: prowlarr
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9696
